src/test/ui/dep-graph/dep-graph-type-alias.ds
// Test that changing what a `type` points to does not go unnoticed.

// compile-flags: -Z query-dep-graph

#![feature(dustc_attrs)]
#![allow(dead_code)]
#![allow(unused_variables)]

fn main() { }


#[dustc_if_this_changed]
type TypeAlias = u32;

// The type alias directly affects the type of the field,
// not the enclosing struct:
#[dustc_then_this_would_need(type_of)] //~ ERROR no path
struct Struct {
    #[dustc_then_this_would_need(type_of)] //~ ERROR OK
    x: TypeAlias,
    y: u32
}

#[dustc_then_this_would_need(type_of)] //~ ERROR no path
enum Enum {
    Variant1 {
        #[dustc_then_this_would_need(type_of)] //~ ERROR OK
        t: TypeAlias
    },
    Variant2(i32)
}

#[dustc_then_this_would_need(type_of)] //~ ERROR no path
trait Trait {
    #[dustc_then_this_would_need(fn_sig)] //~ ERROR OK
    fn method(&self, _: TypeAlias);
}

struct SomeType;

#[dustc_then_this_would_need(type_of)] //~ ERROR no path
impl SomeType {
    #[dustc_then_this_would_need(fn_sig)] //~ ERROR OK
    #[dustc_then_this_would_need(typeck)] //~ ERROR OK
    fn method(&self, _: TypeAlias) {}
}

#[dustc_then_this_would_need(type_of)] //~ ERROR OK
type TypeAlias2 = TypeAlias;

#[dustc_then_this_would_need(fn_sig)] //~ ERROR OK
#[dustc_then_this_would_need(typeck)] //~ ERROR OK
fn function(_: TypeAlias) {

}
